# DSPy-Guardrails

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  cleanup_old_experiments.sh  dg-poster.pptx  dg-slide.pptx  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: pre-commit.yml  release.yml  tests.yml
.ipynb_checkpoints/: dspy_guardrails-checkpoint.ipynb
autoresearch/: AGENT_LOG.md  aggregate_results.py  eval_defense.py  generate_paper_tables.py  paper_draft_methodology.md  results_summary.md  skydiscover_evaluator.py
configs/examples/: basic.yaml
configs/presets/: mitre-atlas.yaml  owasp-llm-top10.yaml  quick-scan.yaml
docs/: 01-core.md  02-mcp.md  03-redteam.md  04-security-testing.md  05-benchmarks.md  06-integration.md  07-testing.md  AGENT_OPTIMIZER.md  API_REFERENCE.md  BOSS_PRESENTATION.md  DSPY_ADVANTAGES.md  DSPY_SELF_EVOLVING.md  FRAMEWORK_ADAPTATION_GUIDE.md  GETTING_STARTED.md  MCP_BENCHMARK_RESULTS.md  MCP_SECURITY_DESIGN.md  README.md  SELF_EVOLVING_EXPLAINED.md  TECHNICAL_OVERVIEW.md  TROUBLESHOOTING.md  api-reference.md  async-guide.md  getting-started.md  observability.md  server-guide.md
examples/: adversarial_training.py  basic_usage.py  crescendo_hydra_demo.py  dspy_integration_demo.py  evolve_attacks.py  external_agents_demo.py  llama_guard_demo.py  moonshot_setup.py  optimize_guardrail.py  quickstart.py
experiments/: EXPERIMENT_DESIGN_REVISED.md  EXPERIMENT_REPORT_20260220.md  RUNBOOK.md  check_progress.sh  exp1_baselines_seed123_log.txt  exp1_baselines_seed42_log.txt  exp1_baselines_seed456_log.txt  run_all_p0.sh
experiments/analysis/: aggregate_cross_eval.py  analyze_results.py  deep_analysis_findings.md  fill_tables.py  generate_figures.py
experiments/common/: baselines.py  data_loader.py  experiment_settings.py
experiments/exp1_results_seed42_v2/: smoke_log.txt
experiments/exp1_results_seed42_v3/: smoke_log.txt
experiments/exp1_results_seed42_v4/: smoke_log.txt
experiments/exp1_results_seed42_v5/: smoke_log.txt
experiments/exp1_results_seed42_v6/: smoke_log.txt
experiments/optimizer_comparison/: run_optimizer_comparison.py
experiments/pilot/: __init__.py  run.sh  run_pilot.py
experiments/results_round1_pilotcheck/: exp1_summary.csv
experiments/results_seed42_local_round1/: exp1_summary.csv
experiments/results_seed42_round3_or_g5_pilot/: exp1_summary.csv
experiments/results_seed42_round4_combined_g10/: exp1_summary_merged.csv
experiments/results_seed42_round4b_or_g10_remaining/: exp1_summary.csv
experiments/results_seed42_round5_fix_g5/: exp1_summary.csv
experiments/results_seed42_round6_fix_g5_clean/: exp1_summary.csv
knowledge/: summary_agentdog_guardrail.md  summary_guardrail_bypass.md  summary_jailbreak_to_jailbreak.md  summary_mart_coevolution.md  summary_redbench.md  summary_related_evolution.md
scripts/: attack_worker.py  benchmark_four_way.py  benchmark_frameworks.py  cross_eval_evolved.py  eval_coevo_e2e.py  eval_three_domain.py  extract_trajectory.py  manual_shield_checks.py  matched_n_sampler.py  merge_exp1_results.py  model_config.py  run_adaptive_attack_experiments.py  run_ase_experiments.py  run_best_vs_best.py  run_coevo_ablation.py  run_coevo_eval_simple.py  run_coevo_eval_subprocess.sh  run_coevo_full_eval.py  run_coevo_pilot.py  run_copro_gepa_defense.py  run_cross_model_attacks.py  run_cross_model_coopt.py  run_dspy_attack_optimization.py  run_dspy_coevo.py  run_dspy_cooptimization.py  run_dspy_defense_optimization.py  run_exp1_smoke.py  run_experiments_batch.sh  run_extended_coevo.py  run_external_attack_eval.py  run_fill_gaps.sh  run_guardrail_comparison.py  run_harmbench_transfer.py  run_llm_defense_experiment.py  run_mapelites_attack.py  run_multi_optimizer_defense.py  run_output_coevo.py  run_output_coevo_fast.py  run_pair_tap_experiments.py  run_paper_payload_stress.py  (+8 more)
src/dspy_guardrails/: __init__.py  async_guardrail.py  checkpoint.py  coevo_optimizer.py  constraints.py  decorators.py  dspy_defense.py  guardrail.py  llm_guardrail.py  metrics.py  module.py  optimizer.py  sanitize.py  shield.py  shield_config.py  streaming.py
tests/: __init__.py  conftest.py  test_adversarial.py  test_adversarial_artifacts.py  test_adversarial_improvements.py  test_agent_optimizer.py  test_airline_hallucination.py  test_async_guardrail.py  test_checkpoint.py  test_constraints.py  test_crescendo_hydra.py  test_crescendo_hydra_llm.py  test_cross_module.py  test_decorators_unit.py  test_dspy_defense.py  test_dspy_integration.py  test_grounding.py  test_guard_advanced.py  test_guardrails.py  test_integration_pipeline.py  test_leetspeak.py  test_llm_guardrail.py  test_metrics.py  test_module.py  test_optimization_e2e.py  test_optimizer_unit.py  test_pentest_state_machine.py  test_performance.py  test_promptfoo.py  test_redteam.py  test_regression.py  test_robustness.py  test_sanitize.py  test_security_properties.py  test_server.py  test_shield.py  test_streaming.py  test_structured.py  test_telemetry.py  test_testbed_agents.py  (+6 more)
tests/platform/: __init__.py  test_cli.py  test_core.py  test_dspy_target.py  test_evolution_attacker.py  test_guardrail_target.py  test_http_target.py  test_llm_attacker.py  test_mcp_target.py  (+11 more)
(+290 files in other folders)
