[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dspy-guardrails"
version = "0.5.0"
description = "Comprehensive guardrails and unified AI security testing platform for DSPy with advanced red team capabilities"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "dspy>=3.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
pii = [
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0",
]
toxicity = [
    "detoxify>=0.5.0",
    "torch>=2.0.0",
]
hallucination = [
    "sentence-transformers>=2.2.0",
]
evolution = [
    "gepa>=0.0.20",
]
viz = [
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
]
async = [
    "aiohttp>=3.9.0",
    "anyio>=4.0.0",
]
telemetry = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "structlog>=23.0.0",
]
server = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]
all = [
    "dspy-guardrails[pii,toxicity,hallucination,evolution,viz,async,telemetry,server]",
    "jsonschema>=4.0.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]
autoresearch = ["requests>=2.28.0"]
dev = [
    "dspy-guardrails[all]",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
dspy-guardrails = "dspy_guardrails.platform.cli:main"
dspy-testbed = "dspy_guardrails.testbed.cli:main"
dspy-autoresearch = "dspy_guardrails.autoresearch.cli:main"

[project.urls]
Homepage = "https://github.com/BoxiYu/DSPy-Guardrails"
Repository = "https://github.com/BoxiYu/DSPy-Guardrails"
Issues = "https://github.com/BoxiYu/DSPy-Guardrails/issues"
Documentation = "https://github.com/BoxiYu/DSPy-Guardrails/tree/main/docs"
Changelog = "https://github.com/BoxiYu/DSPy-Guardrails/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "llm: requires a configured LLM API key",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = "-v --tb=short"

# ---------------------------------------------------------------------------
# black
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "S",   # flake8-bandit (security)
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "S101",  # assert usage (needed in tests & dspy.Assert)
    "S110",  # try-except-pass (intentional silent fallbacks in attack/evolution code)
    "S112",  # try-except-continue (intentional in attack loops)
    "S311",  # pseudo-random (acceptable for attack generation, not crypto)
    "E501",  # line too long (payload strings, HTML templates)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]
"experiments/**" = ["S"]
# Security-specific suppressions for intentional patterns
"src/dspy_guardrails/testbed/external_agents/**" = ["S105"]  # hardcoded password in config defaults
"src/dspy_guardrails/testbed/experiment/cache.py" = ["S301"]  # pickle for caching
"src/dspy_guardrails/testbed/run_experiment.py" = ["E402"]  # sys.path before imports
"src/dspy_guardrails/platform/reporters/junit.py" = ["S318"]  # XML for JUnit reports
"src/dspy_guardrails/redteam/payloads/base.py" = ["S324"]  # md5 for payload fingerprint
"src/dspy_guardrails/promptfoo/config.py" = ["N815"]  # camelCase for promptfoo JSON compat
"src/dspy_guardrails/promptfoo/presets.py" = ["N815"]  # camelCase for promptfoo JSON compat
"src/dspy_guardrails/redteam/config.py" = ["S113", "N806"]  # timeout configurable, class var
"src/dspy_guardrails/platform/cli/main.py" = ["S603"]  # subprocess for streamlit/uvicorn
"src/dspy_guardrails/grounding/llm_grounding.py" = ["N806"]  # Predictor as class reference

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
